--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "firebase": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,5 +39,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ssuzn.github.io/Nwitter/"
+
+  "homepage": "https://ssuzn.github.io/nwitter/"
 }
